<resources>
    <string name="app_name">Popular Movies Stage 2</string>
    <string name="action_settings">Settings</string>
    <string name="add_key_message">copy key here</string>
    <string name="add_api_key_error_message">Set api key in gradle.properties file.</string>
    <string name="highest_rated">Highest rated</string>
    <string name="most_popular">Most popular</string>
    <string name="fav">Favorite</string>
    <string name="pref_sorting_key">sorting_key</string>
    <string name="pref_sorting_default_value">popular</string>
    <string name="pref_sorting_top_rated">top_rated</string>
    <string name="movie_poster">Movie image</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="detail_error_message">Movie data not available</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release date</string>
    <string name="sample_rating">9.4</string>
    <string name="default_fab_value">0</string>
    <string name="favorite">Favorite</string>
    <string name="pref_sorting_favourite">favorite</string>
    <string name="remove_fab">Removed from favorite</string>
    <string name="add_fav">Added to favorite</string>
    <string name="no_fav">You have not added any favorite movie</string>
    <string name="action_fetch_movies">fetch_movies</string>
    <string name="action_fetch_trailers">fetch_trailers</string>
    <string name="youtube_video">Trailer</string>
    <string name="open_trailer">Open Trailer</string>
    <string name="action_fetch_reviews">fetch_reviews</string>
    <string name="see_more">See more</string>
    <string name="author">author</string>
    <string name="title_activity_review">Reviews</string>

</resources>
