<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.derrick.popularmoviesstage2.ui.main.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_popular"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/most_popular"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_top_rated"
            android:orderInCategory="100"
            android:title="@string/highest_rated"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_favorite"
            android:orderInCategory="100"
            android:title="@string/fav"
            app:showAsAction="never" />
    </group>

</menu>
